// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSS — diagnostics > reports diagnostics for a valid CSS file > valid-css-diagnostics 1`] = `
"Diagnostics for fixtures/valid.css (css):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;

exports[`CSS — diagnostics > reports diagnostics for an invalid CSS file > invalid-css-diagnostics 1`] = `
"Diagnostics for fixtures/invalid.css (css):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;
